export class NotificacionService {
  notificar(mensaje: string): void {
    // eslint-disable-next-line no-console
    console.log(`[notificacion] ${mensaje}`);
  }
}
