@startuml diagrama-clases-actualizado
skinparam classAttributeIconSize 0

abstract class Usuario {
  -id: string
  -nombre: string
  -email: string
  -telefono: string
}

class Cliente extends Usuario
class Administrador extends Usuario

enum TipoCancha {
  FUTBOL
  BASQUET
  TENIS
  VOLEY
}

class Cancha {
  -id: string
  -nombre: string
  -tipo: TipoCancha
  -tarifaBase: number
  -ubicacion: string
}

class FranjaHoraria {
  -fecha: string
  -horaInicio: string
  -horaFin: string
  +seSolapaCon(otra: FranjaHoraria): boolean
  +horaInicioComoNumero(): number
  +calcularInicioComoFecha(): Date
}

enum EstadoReserva {
  PENDIENTE
  CONFIRMADA
  CANCELADA
  COMPLETADA
}

class Reserva {
  -id: string
  -clienteId: string
  -canchaId: string
  -franjaHoraria: FranjaHoraria
  -precioTotal: number
  -estado: EstadoReserva
  -fechaCreacion: Date
}

interface EstrategiaTarifa {
  +calcular(cancha: Cancha): number
}

class TarifaEstandar implements EstrategiaTarifa
class TarifaHorarioPico implements EstrategiaTarifa
class TarifaPromocional implements EstrategiaTarifa

class SelectorEstrategiaTarifa {
  -estandar: TarifaEstandar
  -pico: TarifaHorarioPico
  -promocional: TarifaPromocional
  +seleccionar(horaInicio: string): EstrategiaTarifa
}

interface ReservaRepository {
  +guardar(reserva: Reserva): void
  +buscarPorId(id: string): Reserva
  +listarPorCliente(clienteId: string): Reserva[]
  +listarPorCancha(canchaId: string): Reserva[]
}

interface CanchaRepository {
  +guardar(cancha: Cancha): void
  +buscarPorId(id: string): Cancha
  +listarTodas(): Cancha[]
}

class InMemoryReservaRepository implements ReservaRepository
class InMemoryCanchaRepository implements CanchaRepository

class NotificacionService {
  +notificar(mensaje: string): void
}

class DisponibilidadService {
  -reservaRepository: ReservaRepository
  +verificarDisponibilidad(canchaId: string, franja: FranjaHoraria): void
}

class ReservaService {
  -reservaRepository: ReservaRepository
  -canchaRepository: CanchaRepository
  -notificacionService: NotificacionService
  -disponibilidadService: DisponibilidadService
  -selectorEstrategiaTarifa: SelectorEstrategiaTarifa
  +crearReserva(clienteId, canchaId, franja: FranjaHoraria): Reserva
  +cotizarPrecio(canchaId: string, horaInicio: string): number
  +cancelarReserva(reservaId: string): void
}

class CanchaService {
  -canchaRepository: CanchaRepository
  +registrarCancha(nombre, tipo, tarifaBase, ubicacion): Cancha
  +listarTodas(): Cancha[]
}

Usuario <|-- Cliente
Usuario <|-- Administrador

Reserva "0..*" --> "1" Cliente : pertenece a
Reserva "0..*" --> "1" Cancha : reserva
Reserva "1" *-- "1" FranjaHoraria : ocupa
Reserva --> EstadoReserva
Cancha --> TipoCancha

EstrategiaTarifa <|.. TarifaEstandar
EstrategiaTarifa <|.. TarifaHorarioPico
EstrategiaTarifa <|.. TarifaPromocional
SelectorEstrategiaTarifa --> EstrategiaTarifa : selecciona >

ReservaRepository <|.. InMemoryReservaRepository
CanchaRepository <|.. InMemoryCanchaRepository

DisponibilidadService "1" --> "1" ReservaRepository

ReservaService "1" --> "1" ReservaRepository
ReservaService "1" --> "1" CanchaRepository
ReservaService "1" --> "1" NotificacionService
ReservaService "1" --> "1" DisponibilidadService
ReservaService "1" --> "1" SelectorEstrategiaTarifa
CanchaService "1" --> "1" CanchaRepository

note right of ReservaService
  Tras R3, R4 y R6: ReservaService pasó de una
  God Class con 4 responsabilidades mezcladas a
  un orquestador que coordina 4 colaboradores
  especializados, inyectados por constructor.
  Comparar con diagrama-clases.puml (Fase 1).
end note

note right of EstrategiaTarifa
  R6: reemplaza el árbol if/else de tarifa
  (Complex Conditional, informe de malos
  olores #5) por el patrón Strategy ya
  justificado en Fase 1.
end note
@enduml
